<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:title="@string/map"
              android:id="@+id/nav_map"
              android:icon="@drawable/ic_map_black_24dp"/>

        <item android:title="@string/rated_toilets"
              android:id="@+id/nav_favorites"
              android:icon="@drawable/ic_favorite_black_24dp"/>

    </group>

    <item android:title="@string/other">
        <menu>

            <item android:title="@string/feedback"
                  android:id="@+id/nav_feedback"
                  android:icon="@drawable/ic_feedback_black_24dp"/>

            <item android:id="@+id/nav_share"
                  android:icon="@drawable/ic_share_black_24dp"
                  android:title="@string/share"/>

            <item android:id="@+id/nav_about"
                  android:icon="@drawable/ic_info_black_24dp"
                  android:title="@string/about"/>
        </menu>
    </item>

</menu>